# django-storages-poc

./: .gitignore  README.md  makefile  pyproject.toml
files/files/: settings.py  urls.py
files/templates/: base.html  home.html
files/upload/: forms.py  models.py  views.py
files/upload/migrations/: 0001_initial.py
storages/: storages.md
storages/ftp/: ftp.docker-compose.yaml
storages/s3/: s3.docker-compose.yaml
